# engram

./: .bootstrap_complete  .env  .gitignore  MANIFEST.in  README.md  adaptive_memory.py  bootstrap_memory.py  bootstrap_tool.py  brain.py  commit_milestone.sh  context_window_manager.py  conversation_memory_assistant.py  mcp_bootstrap_config.json  memory_context.py  memory_extractor.py  memory_integration.py  memory_manager.py  memory_proxy.py  memory_visualizer.py  persistent_memory.py  pyproject.toml  quick_memory.py  requirements.txt  setup.py  startup_memory.sh  test_memory_integration.py
benchmark/: evaluate_engram.py  results_notes.md
engram_pkg/: __init__.py  cli.py  context.py  core.py  integration.py
examples/: basic_usage.py  external_usage.py
test/: run_tests.py
