[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "2.0.0"
description = "Engram - Passive memory layer for AI conversations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "memory", "llm", "vector-database", "embeddings", "machine-learning"]
dependencies = [
    "numpy>=1.25.0,<2.0.0",
    "faiss-cpu>=1.7.0,<2.0.0",
    "torch>=1.11.0,<3.0.0",
    "transformers>=4.21.0,<5.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "dataclasses-json>=0.5.0,<1.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "black>=22.0.0,<23.0.0",
    "mypy>=1.0.0,<2.0.0",
]
gpu = [
    "torch[cu118]>=1.11.0,<3.0.0",
    "faiss-gpu>=1.7.0,<2.0.0",
]

[project.scripts]
engram = "engram_pkg.cli:main"

[tool.setuptools.packages.find]
exclude = ["test*", "docs*"]

[tool.setuptools.package-data]
engram_pkg = ["*.json", "*.txt"]
